removed tap boxes

--- a/src/app.css
+++ b/src/app.css
@@ -101,10 +101,15 @@ a {
     color: var(--color-link);
     text-decoration: none;
     transition: color var(--transition);
+    -webkit-tap-highlight-color: transparent;
 }
 
 a:hover {
     color: var(--color-link-hover);
+}
+
+button {
+    -webkit-tap-highlight-color: transparent;
 }
 
 img {
